2004-12-02 Magnus Hagdorn
 * extract3DProfile.py: new prog for extracting profile through
   3D field

2004-12-01 Magnus Hagdorn
 * CF_area.py: have fixed length vectors. Still not quite right...
 * plotCFstats.py: added option to plot central ice thicknesses
 * plotCFvar.py: we can now also plot multiple files
 * plotEISMINT2stats.py: added legend

2004-11-30 Magnus Hagdorn
 * CF_area.py: added vector velocity plots
 * CF_colourmap.py: colourmaps for vel and bvel
 * CF_loadfile.py: get magnitude of velocity fields
 * plotCFvar.py: also plot vectors

2004-11-29 Magnus Hagdorn
 * plotEISMINT2stats.py: fixed bug where relative changes were not multiplied
 with 100 to get %

2004-11-29 Magnus Hagdorn
 * CF_colourmap.py: moved data directory stuff to CF_utils.py
 * CF_utils.py: added data directory stuff, added EISMINT2 stats extraction
 * extractCFstats.py: moved EISMINT2 stats extraction to CF_utils.py
 * plotEISMINT2stats.py: new prog for plotting EISMINT2 statistics
 * eismint2.data: stats from EISMINT2 paper

2004-11-26 Magnus Hagdorn
 * extractCFstats.py: fixed bug

2004-11-25 Magnus Hagdorn
 * CF_loadfile.py: some minor fixes
 * CF_options.py: added -T switch to specify time slice rather than time
 * extractCFstats.py: new program for extracting EISMINT statistics

2004-11-23 Magnus Hagdorn
 * extractProfile.py: correct labeling for averaged quantities
 * plotEISMINT.py: much improved EISMINT plotter
 * CF_profilearea.py: slight bug with averaged quantities and is3d

2004-11-23 Magnus Hagdorn
 * CF_loadfile.py: appending _avg to a variable takes the vertical average of it

2004-11-18 Magnus Hagdorn
 * CF_loadfile.py: fix bug in temperature correction
 * CF_options.py: apply colourmaps to profiles as well

2004-11-10 Magnus Hagdorn
 * CF_area.py: added switch to plot mono images
 * CF_options.py: added switch to plot mono images
 * CF_loadfile.py: calculate fractional melt area
 * CF_createfile.py: produce CF compliant netCDF files